# learning-path-agentic-system

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  TECHNICAL_OVERVIEW.md  Test_Results.html  app.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_bm25.py
.streamlit/: secrets.toml.template
data/chroma/70926d4f-f0d4-45b1-8487-047644d592f7/: index_metadata.pickle
reports/: hybrid-tests.xml
scripts/: _log.py  embed_courses.py  extract_prerequisites.py  extract_skills.py  ingest_data.py  init_db.py
src/: config.py
src/analysis/: __init__.py  skill_gap.py
src/db/: connection.py  ingest.py  schema.py  user_context.py  user_skills.py
src/generation/: __init__.py  plan_generator.py  plan_persistence.py  prereq_loader.py
src/llm/: client.py  extract_goal_skills.py  extract_prerequisites.py  extract_skills.py  prompts.py
src/models/: schemas.py
src/orchestrator/: __init__.py  draw_graph.py  errors.py  graph.py  nodes.py  state.py
src/retrieval/: __init__.py  bm25_retrieval.py  hybrid.py  semantic_retrieval.py
src/validation/: checks.py  loop.py  repair.py
src/vectorstore/: chroma.py  embed_courses.py
tests/: conftest.py  test_bm25_retrieval.py  test_hybrid.py  test_semantic_retrieval.py
